Changes to be committed: 	new file:   .vscode/settings.json 	new file:   android/app/src/main/res/drawable-hdpi/splash.png 	new file:   android/app/src/main/res/drawable-mdpi/splash.png 	new file:   android/app/src/main/res/drawable-v21/background.png 	modified:   android/app/src/main/res/drawable-v21/launch_background.xml 	new file:   android/app/src/main/res/drawable-xhdpi/splash.png 	new file:   android/app/src/main/res/drawable-xxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-xxxhdpi/splash.png 	new file:   android/app/src/main/res/drawable/background.png 	modified:   android/app/src/main/res/drawable/launch_background.xml 	new file:   android/app/src/main/res/values-night-v31/styles.xml 	modified:   android/app/src/main/res/values-night/styles.xml 	new file:   android/app/src/main/res/values-v31/styles.xml 	modified:   android/app/src/main/res/values/styles.xml 	new file:   assets/images/splash.png 	modified:   ios/Flutter/Debug.xcconfig 	modified:   ios/Flutter/Release.xcconfig 	new file:   ios/Podfile 	new file:   ios/Podfile.lock 	modified:   ios/Runner.xcodeproj/project.pbxproj 	modified:   ios/Runner.xcworkspace/contents.xcworkspacedata 	new file:   ios/Runner/Assets.xcassets/LaunchBackground.imageset/Contents.json 	new file:   ios/Runner/Assets.xcassets/LaunchBackground.imageset/background.png 	modified:   ios/Runner/Assets.xcassets/LaunchImage.imageset/Contents.json 	modified:   ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage.png 	modified:   ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage@2x.png 	modified:   ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage@3x.png 	modified:   ios/Runner/Base.lproj/LaunchScreen.storyboard 	modified:   ios/Runner/Info.plist 	new file:   lib/event_app.dart 	modified:   lib/main.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.4.6   
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +18,13 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/splash.png
+  web: true
+  android: true
+  ios: true
+  
